# schematics

./: .gitignore  CMakeLists.txt
data/: config.sql  db-structure.sql  delays-data.sql  doors-data.sql  hmi-tags.csv  offsets.sql  schematics-data.sql  schematics.sql  speed-control.md  speeds-data.sql
data/xml-config/: alarm.xml  coords - 2019-09-10-v0.xml  coords - Copy (2).xml  coords - Copy (3).xml  coords - Copy (4).xml  coords - Copy (5).xml  coords - Copy.xml  coords.xml  coordsbits - Copy.xml  coordsbits.xml  curcoords.xml  curcoordsbits.xml  delays-oig.xml  delays.xml  engines.xml  galarm.xml  gengines.xml  sensors.xml  servdoor.xml  speeds.xml
schematics/: CMakeLists.txt
schematics/lib/: CMakeLists.txt
schematics/lib/libcoords/coords/: coordinates.cxx  coordinates.hxx  coords.cxx  coords.hxx  geometry.cxx  offset.cxx  offset.hxx  positionid.hxx
schematics/lib/libschema/schema/: params.cxx  params.hxx  reader.cxx  reader.hxx  schema.cxx  schema.hxx  units.cxx  units.hxx  writer.cxx  writer.hxx  xmlreader.cxx  xmlreader.hxx  xmltags.cxx  xmltags.hxx  xmlwriter.cxx  xmlwriter.hxx
schematics/src/: CMakeLists.txt  main.cxx
schematics/src/editor/: editor.cxx  editorwindow.cxx  editorwindow.hxx
schematics/src/services/: alpha.cxx  alpha.hxx  alphasupport.cxx  alphasupport.hxx  application.cxx  application.hxx  database.cxx  database.hxx  databasetable.cxx  databasetable.hxx  facade.cxx  facade.hxx  fasade.cxx  fasade.hxx  machine.cxx  machine.hxx  settingstable.cxx  settingstable.hxx  storage.cxx  storage.hxx  tags.cxx  tags.hxx
schematics/src/ui/: mainwindow.cxx  mainwindow.hxx
schematics/src/ui/dialogs/: editdelegate.cxx  editdelegate.hxx  tabledialog.cxx  tabledialog.hxx
schematics/src/ui/resources/: ledpix.qrc
schematics/src/ui/tools/: tool.cxx  tool.hxx
schematics/src/ui/widgets/: ledlist.cxx  ledlist.hxx  leds.cxx  leds.hxx  numbereditor.cxx  numbereditor.hxx  speedcontrol.cxx  speedcontrol.hxx
schematics/src/ui/widgets/coords/: coordstab.cxx  coordstab.hxx
schematics/src/ui/widgets/scheme/: schemeeditor.cxx  schemeeditor.hxx  schemescene.cxx  schemescene.hxx  schemeview.cxx  schemeview.hxx
schematics/test/: CMakeLists.txt  test_params.cxx  test_schema.cxx  test_units.cxx
schematics/test/test_coords/: test_calc_main.cxx  test_schemecalculator.cxx  test_schemecalculator.hxx
schematics/test/test_services/: test_tags.cxx
scripts/: import_coords.py
scripts/importer/: __main__.py  app.py  database.py  parser.py  views.py
